--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
     
 </head>
+
 <body>
+
+  <h1>hoka</h1>
+<h2>hola 2</h2>
   <nav class="navbar navbar-expand-lg fondo-nav">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">NOMBRE DE MI SITIO</a>
